# vidaxl-footprint

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/skills/commit-and-push/: SKILL.md
.claude/skills/deploy/: SKILL.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_tavily_sources.py
dashboard/: app.js  index.html  login.html  style.css
docs/contexts/: session-2026-03-20-initial-build.md
src/: config.py  database.py  main.py  security.py
src/analysis/: llm_client.py  mock.py  pipeline.py  prompts.py  sentiment.py  themes.py  trends.py
src/api/: analysis.py  articles.py  dashboard.py  reviews.py  scraper_control.py
src/models/: __init__.py  analysis.py  article.py  review.py  scrape_run.py  source.py
src/schemas/: __init__.py  common.py
src/scrapers/: __init__.py  base.py  news_generic.py  pissedconsumer.py  registry.py  reviewsio.py  tavily_search.py  trustpilot.py
src/services/: analysis_service.py  review_service.py  scraper_service.py
src/tasks/: scheduler.py
tests/: conftest.py  test_api_smoke.py  test_ui_smoke.py
